<resources>
    <string name="app_name">android70_Ex03</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">비밀번호</string>
    <string name="edit_password">비밀번호를 입력해주세요.</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="edit_check_password">비밀번호를 다시 입력하세요.</string>
    <string name="setting_complete">설정완료</string>
    <string name="memo_add">메모 등록</string>
    <string name="category_add">카테고리 등록\n</string>
    <string name="title">제목</string>
    <string name="edit_title_add">제목을 입력하세요.</string>
    <string name="content">내용</string>
    <string name="eidt_content">내용을 입력하세요</string>
    <string name="creation_date">작성날짜</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="save">저장</string>
    <string name="login">로그인</string>
</resources>