<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".fragment.MemoModifyFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/memo_modify_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/memo_title_modify_editText"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_square"
            android:hint="@string/edit_title_add"
            android:paddingEnd="15dp"
            android:paddingStart="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/edit_content_modify_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:layout_marginTop="15dp"
            android:gravity="top"
            android:background="@drawable/border_square"
            android:hint="@string/eidt_content" />

    </LinearLayout>

</LinearLayout>