<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.MemoViewContentFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/memo_view_content_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/memo_view_content_title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="과자"
            android:background="@drawable/border_square"
            android:layout_marginTop="15dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creation_date"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/memo_view_content_date_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="2023-07-07"
            android:background="@drawable/border_square"
            android:layout_marginTop="15dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/memo_view_content_content_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="포카칩은 맛있다."
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:background="@drawable/border_square"
            android:layout_marginTop="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    </LinearLayout>

</LinearLayout>